# rbsync

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/rbsync/: __init__.py  app.py
