[project]
name = "rbsync"
version = "0.1.0"
description = "A slice correspondence tool for multi-modal rat MRI and atlas alignment"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "napari[all]>=0.4.18",
    "nibabel>=5.0.0",
    "numpy>=1.24.0",
    "qtpy>=2.3.0",
]

[project.scripts]
rbsync = "rbsync.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
